--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -5,7 +5,7 @@
 
 h1 img {
     width: auto;
-    height: 2em;
+    height: 1.6em;
     vertical-align: middle;
 }
 
@@ -22,12 +22,14 @@ h1 img {
 }
 
 .search-result li {
+    box-sizing: border-box;
     list-style: none;
     text-align: center;
     margin: 0;
     padding: 0;
-    flex: 0.1;
-    flex-basis: 10%;
+    flex: 10%;
+    padding: 0.2em;
+    word-break: break-all;
 }
 
 .search-result li .desc {
